--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.6.3",
     "reactstrap": "^6.5.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "react-scripts": "^2.1.1"
   },
   "devDependencies": {
     "react-scripts": "^2.1.1"
